# ne

./: .gitignore  BUILD.bazel  CLAUDE.md  GEMINI.md  Makefile  README.md  RELEASE_TEMPLATE.md  WORKSPACE  demo.go  fuzzy_search.md  go.mod  go.sum  similar.md
.github/workflows/: release.yml
assets/: README.md
cmd/kvbuilder/: main.go
cmd/ne/: main.go
docs/: bazel_usage.md  fuzzy_search.md  similar.md
internal/bbolthelper/: BUILD.bazel  bbolthelper.go  bbolthelper_test.go
